player page added

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 
         <div class="side2">
           <div class="side2-i1 side2-i1s">
-            <img src="./assets/side2_i1.svg" alt="" />
-            <p>Home</p>
-          </div>
+              <img src="./assets/side2_i1.svg" alt="" />
+              <p>Home</p>
+            </div>
           <div class="side2-i1 side2-i1s">
             <img src="./assets/side2_i2.svg" alt="" />
             <p>Search</p>
@@ -42,13 +42,15 @@
         </div>
 
         <div class="side3">
-          <div class="side2-i1 side2-i1s">
+          <a class="side2-i1 side2-i1s hanch" href="./player.html" target="_blank"
+            ><div class="side2-i1 side2-i1s ha">
             <i
               class="fa-solid fa-plus"
               style="color: #ffffff; margin-left: 3px; margin-right: 11px"
             ></i>
             <p>PlayList</p>
-          </div>
+          </div></a
+          >
           <div class="side2-i1 side2-i1s">
             <img src="./assets/side3_i2.svg" alt="" />
             <p>Search</p>
@@ -119,86 +121,82 @@
             </div>
 
             <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
 
-              <div class="main-dash3-i">
-                <img src="./assets/pic1.svg" alt="" />
-                <p class="mp1">Weekly Motivatio...</p>
-                <p class="mp2">Ben Ina Scott</p>
-              </div>
-
+            <div class="main-dash3-i">
+              <img src="./assets/pic1.svg" alt="" />
+              <p class="mp1">Weekly Motivatio...</p>
+              <p class="mp2">Ben Ina Scott</p>
+            </div>
           </div>
-          
         </div>
       </section>
 
       <!-- Player section -->
       <section class="player">
         <div id="plr">
-            <img class="plr1" src="./assets/play1.svg" alt="">
-            <img class="plr2" src="./assets/controller.svg" alt="">
-            <img class="plr3" src="./assets/Right_options.svg" alt="">
+          <img class="plr1" src="./assets/play1.svg" alt="" />
+          <img class="plr2" src="./assets/controller.svg" alt="" />
+          <img class="plr3" src="./assets/Right_options.svg" alt="" />
         </div>
-        <div id="plr-info">
-           
-        </div>
+        <div id="plr-info"></div>
       </section>
     </main>
   </body>
